--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/telemetry.py" }
+    { "src": "/api/(.*)", "dest": "/api/index.py" }
   ]
 }
